Can now update people.

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -47,7 +47,7 @@
             <span class="ui green label"> {{ person.company }} </span>
             {% endif %} -->
 
-            <a class="ui blue button" href="/update/{{ person.id }}">Update</a>
+            <a class="ui blue button" href="/updatePage/{{ person.id }}">Update</a>
             <a class="ui red button" href="/delete/{{ person.id }}">Delete</a>
         </div>
         {% endfor %}
