--- a/cmd/server/templates/person_edit_form.html
+++ b/cmd/server/templates/person_edit_form.html
@@ -1,12 +1,34 @@
-<tr id="person-{{.Index}}">
-    <form hx-post="/update" hx-target="#person-{{.Index}}" hx-swap="outerHTML">
+<tr id="person-{{.Index}}" class="border-t bg-yellow-50">
+    <form 
+        hx-post="/update" 
+        hx-target="#person-{{.Index}}" 
+        hx-swap="outerHTML"
+        class="flex gap-2 justify-center"
+    >
         <input type="hidden" name="index" value="{{.Index}}">
-        <td><input type="text" name="name" value="{{.Person.Name}}" required></td>
-        <td><input type="text" name="met_at" value="{{.Person.MetAt}}" required></td>
-        <td><input type="text" name="works_at" value="{{.Person.WorksAt}}" required></td>
-        <td><input type="text" name="fact" value="{{.Person.Fact}}" required></td>
-        <td>
-            <button type="submit">Save</button>
+        <td class="p-2">
+            <input name="name" value="{{.Person.Name}}" class="w-full border p-1 rounded">
+        </td>
+        <td class="p-2">
+            <input name="met_at" value="{{.Person.MetAt}}" class="w-full border p-1 rounded">
+        </td>
+        <td class="p-2">
+            <input name="works_at" value="{{.Person.WorksAt}}" class="w-full border p-1 rounded">
+        </td>
+        <td class="p-2">
+            <input name="fact" value="{{.Person.Fact}}" class="w-full border p-1 rounded">
+        </td>
+        <td class="p-2">
+          <button type="submit" class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded text-sm">Save</button>
+        </td>
+        <td class="p-2">
+          <button 
+              type="button" 
+              hx-get="/row?index={{.Index}}" 
+              hx-target="#person-{{.Index}}" 
+              hx-swap="outerHTML"
+              class="text-gray-600 hover:underline text-sm"
+          >Cancel</button>
         </td>
     </form>
 </tr>
