--- a/cmd/server/templates/person_edit_form.html
+++ b/cmd/server/templates/person_edit_form.html
@@ -20,8 +20,8 @@
         </td>
         <td class="p-2">
           <button type="submit" class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded text-sm">Save</button>
-        </td>
-        <td class="p-2">
+        <!--</td>-->
+        <!--<td class="p-2">-->
           <button 
               type="button" 
               hx-get="/row?index={{.Index}}" 
